higher contrast bg for header, and fix photo on contact page

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -28,7 +28,7 @@ a {
 }
 
 .dream-bg {
-  background-image: url("~/assets/adrian-infernus-GLf7bAwCdYg-unsplash.jpg");
+  background-image: url("~/assets/luke-chesser-3rWagdKBF7U-unsplash.jpg");
   background-position: top center;
   background-size: cover;
   @apply text-white;
